Add empty example unit test to prevent ci build from failing

--- a/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
+++ b/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
@@ -1,18 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-
     <OutputType>Exe</OutputType>
-    <!--
-    To enable the Microsoft Testing Platform 'dotnet test' experience, add property:
-      <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
-
-    To enable the Microsoft Testing Platform native command line experience, add property:
-      <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
-
-    For more information on Microsoft Testing Platform support in xUnit.net, please visit:
-      https://xunit.net/docs/getting-started/v3/microsoft-testing-platform
-    -->
+    <UserSecretsId>c8fa6b55-5c21-4134-a86e-975dd9d19c5a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
