Add settings to unit tests csproj

--- a/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
+++ b/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <UserSecretsId>c8fa6b55-5c21-4134-a86e-975dd9d19c5a</UserSecretsId>
+    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
   </PropertyGroup>
 
   <ItemGroup>
