--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
         run: dotnet restore
 
       - name: Build solution
-        run: dotnet build ScrabbleReloaded.slnx --no-restore --configuration Release
+        run: dotnet build --no-restore --configuration Release
 
       - name: Run tests
-        run: dotnet test ScrabbleReloaded.slnx --no-build --verbosity normal
+        run: dotnet test --no-build --verbosity normal
