--- a/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
+++ b/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
-    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+    <!--    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>-->
+    <!--    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>-->
   </PropertyGroup>
 
   <ItemGroup>
