--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,4 +31,6 @@ jobs:
         run: dotnet build --no-restore --configuration Release
 
       - name: Run tests
-        run: dotnet test ./Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj --no-build --verbosity normal
+        run: |
+          cd Gameplay/Gameplay.Domain.UnitTests
+          dotnet test --no-build --verbosity normal
