--- a/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
+++ b/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
@@ -2,18 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <!--
-    To enable the Microsoft Testing Platform 'dotnet test' experience, add property:
-      <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
-
-    To enable the Microsoft Testing Platform native command line experience, add property:
-      <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
-
-    For more information on Microsoft Testing Platform support in xUnit.net, please visit:
-      https://xunit.net/docs/getting-started/v3/microsoft-testing-platform
-    -->
+    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+    <UseAppHost>true</UseAppHost>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
