Update test project

--- a/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
+++ b/Gameplay/Gameplay.Domain.UnitTests/Gameplay.Domain.UnitTests.csproj
@@ -1,4 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <TestingPlatformDotnetTestSupport>false</TestingPlatformDotnetTestSupport>
+    <UseMicrosoftTestingPlatformRunner>false</UseMicrosoftTestingPlatformRunner>
+  </PropertyGroup>
   
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest"/>
