--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,4 @@ jobs:
         run: dotnet build --no-restore --configuration Release
 
       - name: Run tests
-        run: |
-          cd Gameplay/Gameplay.Domain.UnitTests
-          dotnet test --no-build --verbosity normal
+        run: dotnet test --no-build --verbosity normal
